Mise à jour du chapitre 2

--- a/01-force-electrique/diapos01.tex
+++ b/01-force-electrique/diapos01.tex
@@ -177,7 +177,7 @@ entre le ballon et le mur?
 
 \begin{frame}{Passage d'électrons}
   Vous vous tenez à \SI{2}{m} de votre ami. Combien d'électrons devez vous lui
-  transférer pour que la force électrique entre vous deux soit égale à votre
+  transférer pour que la force électrique entre vous deux ait la même grandeur que celle de votre
   poids?
   \begin{center}
     \includegraphics[scale=0.5]{figures/passage-electrons.png}
