--- a/em.tex
+++ b/em.tex
@@ -17,7 +17,7 @@
 \maketitle
 
 \include{01-force-electrique/planif01}
-%\include{02-champ-electrique/planif02}
+\include{02-champ-electrique/planif02}
 %\include{03-gauss/planif03}
 %\include{04-potentiel/planif04}
 %\include{07-condensateurs/planif07}
