--- a/03-gauss/planif03.tex
+++ b/03-gauss/planif03.tex
@@ -1,7 +1,105 @@
 \chapter{Théorème de Gauss}
 
 
-\marginpar{Tremblay chapitre 3}
+\section{Équilibre électrostatique}
+
+\marginpar{Tremblay \S 2.9}
+
+\paragraph{Objectif}
+
+\begin{enumerate}
+  \item L'étudiant comprendra ce qui se passe avec les charges dans un
+    conducteur soumis à un champ électrique.
+  \item L'étudiant saura comment déterminer le champ électrique dans un
+    conducteur de même que dans une cavité à l'intérieur d'un conducteur.
+\end{enumerate}
 
 
-Le théorème de Gauss ne sera pas abordé dans ce cours.
+\subsection*{Le champ électrique à l'intérieur du conducteur est nul}
+
+Preuve: s'il ne l'était pas, le champ électrique à l'intérieur exercerait une
+force sur les électrons libres. Ils se déplaceraient dans la direction opposée
+au champ électrique. On aurait alors une charge $+$ solitaire et une charge $-$
+solitaire qui généreraient un champ électrique dans la direction opposée à
+celle du champ initial. Le processus continuerait tant et aussi longtemps que
+le champ électrique initial n'a pas été complètement neutralisé.
+
+
+
+\subsection*{Le champ électrique à la surface d'un conducteur est toujours
+  perpendiculaire à la surface}
+
+Preuve: si ce n'était pas le cas, on aurait un mouvement des électrons libres
+proches de la surface qui finirait par neutraliser la composante tangentielle
+du champ.
+
+
+
+\subsection*{Dans un conducteur chargé, toute la charge se retrouve à la surface
+  extérieure}
+
+Preuve: Le champ électrique à l'intérieur doit être nul. Si une charge nette
+macroscopique se trouvait à l'intérieur, à proximiter de cette charge, le champ
+électrique serait non-nul.
+
+
+
+\subsection*{Dans une cavité à l'intérieur d'un conducteur, le champ électrique est
+  nul}
+
+On crée une cavité dans le conducteur. Tout le matériel enlevé est
+neutre à cause du paragraphe précédent. Par conséquent, le matériel enlevé
+n'exerçait aucune force sur les charges situées à la surface du conducteur.
+Comme les charges à la surface étaient à l'équilibre avant d'enlever le
+matériel, enlever du matériel qui n'exerçait aucune force ne changera pas leur
+état d'équilibre.
+
+Le champ électrique où le matériel a été enlevé était nul avant de faire le
+trou. On a enlevé du matériel neutre qui ne contribuait donc pas au champ
+électrique. Les charges qui étaient à la surface n'ont pas bougé (argument du
+paragraphe précédent). Le champ électrique est déterminé complètement par la
+configuration des charges. Par conséquent, le champ électrique dans la cavité
+doit encore être nul.
+
+
+\subsection*{Exercice avec des sphères métalliques}
+
+Une charge $q = \si{4}{mC}$ dans une cavité au centre d'une sphère métallique.
+Quelle est la charge sur la surface intérieur et la surface extérieur de la
+sphère? Tracer les lignes de champ.
+
+
+\subsection*{Champ d'un conducteur sphérique (ou isolant uniformément chargé)}
+
+En réfléchissant aux lignes de champ, on peut voir que le champ à l'extérieur
+d'une sphère métallique chargée est le même que si toute la charge était
+concentré au centre.
+
+
+\section{Champ électrique dans les diélectriques}
+
+\marginpar{Tremblay \S 2.10}
+
+\subsection*{Constante diélectrique}
+
+\marginpar{5 minutes}
+
+Le champ électrique induit dans un diélectrique est en général proportionnel au
+champ électrique externe
+$$\vE_\text{diel} = \alpha \vE_\text{vide}$$
+donc le champ électrique total est
+$$\vE = \vE_\text{vide} + \vE_\text{diel} = (1 + \alpha) \vE_\text{vide}.$$
+On définit la \textbf{constante diélectrique} comme
+$$\kappa = \frac{1}{1 + \alpha}$$
+ie
+$$\vE = \frac{1}{\kappa} \vE_\text{vide}.$$
+
+
+\subsection*{Rigidité diélectrique}
+
+Si le champ électrique externe appliqué sur un diélectrique est trop élevé, les
+électrons seront arrachés aux atomes et un courant pourra traverser le
+diélectrique. C'est ce qu'on appelle une \textbf{décharge}. Chaque matériau est
+capable de supporter un champ électrique maximum qu'on appelle la
+\textbf{rigidité diélectrique}.
+
