--- a/common.tex
+++ b/common.tex
@@ -1,10 +1,13 @@
 \usepackage[french]{babel}
-\usepackage{fontspec}
+%\usepackage{fontspec}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{amsmath, amsthm, amsfonts}
 \usepackage[separate-uncertainty]{siunitx}
 \usepackage{xcolor}
 \usepackage{tikz}
 \usepackage{tikz-cd}
+\usepackage{pgfplots}
 \usepackage[object=vectorian]{pgfornament}
 \usepackage{circuitikz}
 \usepackage{hyperref}
@@ -16,6 +19,7 @@
 \usepackage{marginnote}
 \usepackage[framemethod=tikz]{mdframed}
 
+\pgfplotsset{compat = 1.3}
 
 % Paul Tol's qualitative palette
 % ``bright''.https://personal.sron.nl/~pault/#sec:qualitative
